struct Reserve{  
1: i32 reser_no,
2: i64 card_no,
3: string hotel_id, 
4: string room_type_id, 
5: i64 arrive_date, 
6: i64 leave_date, 
7: string time_early, 
8: string time_late, 
9: i16 num_room,  
10:	string currency_ID, 
11:	bool add_bed,  
12:	string guest_name,
13:	string guest_type, 
14:	string guest_sex, 
15:	string contacter, 
16:	string contacter_mobile, 
17:	string contacter_sex, 
18:	string reser_status, 
19:	string reser_status1, 
20:	string settle_status,
21:	byte print_status, 
22:	byte fax_status, 
23:	string email, 
24:	string fax, 
25:	string phone, 
26:	string confirm_method, 
27:	string confirm_client,
28:	i64 confirm_date, 
29:	string other,
30:	byte other_enable,  
31:	string op_user, 
32:	i64 op_date, 
33:	string es, 
34:	string payment,
35:	string inspector, 
36:	i64 lastchecked_date, 
37:	string amendor, 
38:	i64 amend_date, 
39:	string sum_price, 
40:	string sum_sign, 
41:	string num_night, 
42:	string room_no,
43:	byte arrive_now, 
44:	string price_changed, 
45:	string double_credit, 
46:	string add_bed_price, 
47:	byte add_bed_num, 
48:	string op_ip, 
49:	string hotel_confirm_num, 
50:	i32 additional_status, 
51:	i16 hotel_credit, 
52:	i32 additional_statusI, 
53:	byte Room_Credit, 
54:	string Guest_Info,
55:	byte gage_status, 
56:	string halfday_price, 
57:	string halfday_sign_price, 
58:	string gs_es, 
59:	byte gp_settle_status, 
60:	string guest_country, 
61:	i32 guest_num, 
62:	byte payment_way, 
63:	byte payhotel_status, 
64:	string trans_num, 
65:	i32 order_from, 
66:	byte price_source_type, 
67:	byte room_num_type, 
68:	string hotel_price_statu, 
69:	string room_unique_id, 
70:	string Credit_Card_No, 
71:	byte Phone_Type,  
72:	byte Contacter_Mobile_Type
}  
service Serv{  
 bool create(1: Reserve s),
 bool createBatch(1: list<Reserve> lst)
}  